Segmenta las configuraciones de desarrollo y elimina la información sensible de los archivos de configuración

--- a/src/CommandAPI/CommandAPI.csproj
+++ b/src/CommandAPI/CommandAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <UserSecretsId>97c4b80f-a87a-458f-ac28-6df69e9bdfb6</UserSecretsId>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
