Cambia la base desde Postgre hacia MySql

--- a/src/CommandAPI/appsettings.Development.json
+++ b/src/CommandAPI/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSqlConnection":"Host=localhost;Port=5432;Database=CmdAPI;Pooling=true;"
+    // "PostgreSqlConnection":"Host=localhost;Port=5432;Database=CmdAPI;Pooling=true;",
+    "MysqlSqlConnection":"server=localhost;database=mg;user=root;password=masto;"
   }
 }
